# asciimath-rs

./: .gitignore  .run_tests.sh  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dev  dev.sh  run_tests.sh
.circleci/: config.yml
logger/: debug.rs  mod.rs
src/: error.rs  lexer.rs  lib.rs  macros.rs  main.rs  parser.rs  util.rs
src/ast/: eval.rs  mod.rs  node.rs  resolve.rs  scope.rs
src/constants/: functions.rs  index.rs  mod.rs
src/functions/: index.rs  mod.rs
src/lexer/: index.rs  mod.rs  tests.rs
src/lib/: lexer.rs  lib.rs  mod.rs  parser.rs  rest.rs
src/lib/ast/: mod.rs  node.rs  value.rs
src/lib/tokens/: func.rs  mod.rs  number.rs  token.rs  variable.rs
src/logger/: debug.rs  mod.rs
src/tokens/: func.rs  mod.rs  number.rs  operator.rs  token.rs  variable.rs
tests/: lib.rs
