[package]
name = "asciimath"
edition = "2018"
version = "0.8.7"
authors = ["Gregory <gregory.mkv@gmail.com>"]
description = "Mathematical expression parser and evaluator"
keywords = ["math", "expression", "evaluation", "parser"]
license = "MIT"
documentation = "https://docs.rs/asciimath/0.3.0/asciimath/"
homepage = "https://github.com/chmln/asciimath-rs"
repository = "https://github.com/chmln/asciimath-rs.git"
readme = "README.md"
categories = ["science", "parsing"]

[lib]
name = "asciimath"
path = "./src/lib.rs"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false

[dependencies]
lazy_static = "1.3.0"
