[package]
name = "asciimath"
edition = "2018"
version = "0.8.8"
authors = ["Gregory <gregory.mkv@gmail.com>"]
description = "Mathematical expression parser and evaluator"
keywords = ["math", "expression", "evaluation", "parser"]
license = "MIT"
documentation = "https://docs.rs/asciimath"
homepage = "https://github.com/chmln/asciimath-rs"
repository = "https://github.com/chmln/asciimath-rs.git"
readme = "README.md"
categories = ["science", "parsing"]

[lib]
name = "asciimath"
path = "./src/lib.rs"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false

[dependencies]
once_cell = { version = "1.3.1", default-features = false, features = ["std"] }
thiserror = "1.0.10"
smallvec = "1.2.0"
